# selenium_pet_project

./: .gitignore  pyproject.toml  z.py
test_booking/test_cases/: conftest.py  methods.py  page_object_methods.py  test.py
test_booking/test_cases/selectors/: selectors_page.py
test_booking/test_cases/selectors_site/: selectors_page.py
