[tool.poetry]
name = "pet-project"
version = "0.1.0"
description = ""
authors = ["MozzhukhinRA <roma.moz@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
selenium = "4.34.2"
requests = "2.32.4"
pytest = "8.4.1"
selene = "2.0.0rc9"
allure-pytest = "2.13.2"
faker = "4.0"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
